[FIX] - add more logs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,13 @@ jobs:
         # Delete the ref to avoid keeping history.
         git update-ref -d refs/heads/gh-pages
         echo "git update-ref completed."
+        ls -l
+        echo "ls completed."
         rm -rf *
         mv ../book/* .
+        echo "git mv completed pwd $PWD."
         git add .
         git commit -m "Deploy $GITHUB_SHA to gh-pages"
+        echo "git commit completed."
         git push --force --set-upstream origin gh-pages
+        echo "git push completed."
